--- a/DotNetBackEnd/MainService/MainService/appsettings.Production.json
+++ b/DotNetBackEnd/MainService/MainService/appsettings.Production.json
@@ -1,8 +1,8 @@
 //{
 //  "ConnectionStrings": {
-//    //"ThucTapTotNghiep": "Server=sql-server-2019-container, 1435;Database=db-tttn;User ID=SA;Password=Abc@123456789;TrustServerCertificate=true;Encrypt=false"
-//    //"ThucTapTotNghiep": "Server=localhost, 1433;Database=db-tttn;User ID=sa;Password=vQt1hcssss;TrustServerCertificate=true;Encrypt=false"
-//    "ThucTapTotNghiep": "Server=host.docker.internal, 1433;Database=db-tttn;User ID=sa;Password=vQt1hcssss;"
+//    //"DoAnTotNghiep": "Server=sql-server-2019-container, 1435;Database=db-main;User ID=SA;Password=Abc@123456789;TrustServerCertificate=true;Encrypt=false"
+//    //"DoAnTotNghiep": "Server=localhost, 1433;Database=db-main;User ID=sa;Password=vQt1hcssss;TrustServerCertificate=true;Encrypt=false"
+//    "DoAnTotNghiep": "Server=host.docker.internal, 1433;Database=db-main;User ID=sa;Password=vQt1hcssss;"
 //  },
 //  "AppConfigs": {
 //    "RootUrl": "http://localhost:61191",
@@ -20,7 +20,7 @@
 {
   "CategoryService": "https:localhost:41520/api/category/",
   "ConnectionStrings": {
-    "ThucTapTotNghiep": "Server=.;Database=db-tttn;User ID=sa;Password=vQt1hcssss;"
+    "DoAnTotNghiep": "Server=.;Database=db-main;User ID=sa;Password=vQt1hcssss;"
   },
   "RabbitMQHost": "localhost",
   "RabbitMQPort": "5672",
