--- a/DotNetBackEnd/MailService/MailService/appsettings.json
+++ b/DotNetBackEnd/MailService/MailService/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "AppConfigs": {
-    "Email": "TUONG.VOQUANG2@bcn.bosch.com",
-    "Password": "UKhotM6xqkqZ"
+    "Email": "voquangtuong336699@outlook.com.vn",
+    "Password": "mAtKhau77640119Azx#@21102023"
   }
 }
