--- a/DotNetBackEnd/MainService/MainService/DoAnTotNghiep.csproj
+++ b/DotNetBackEnd/MainService/MainService/DoAnTotNghiep.csproj
@@ -8,7 +8,7 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <NoWarn>$(NoWarn);1591</NoWarn>
     <UserSecretsId>7b1cd7d4-67a6-4cc8-9471-b194c77f8bcb</UserSecretsId>
-    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
