--- a/DotNetBackEnd/MainService/MainService/Dockerfile.original
+++ b/DotNetBackEnd/MainService/MainService/Dockerfile.original
@@ -7,16 +7,16 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
-COPY ["MainService/doantotnghiep.csproj", "MainService/"]
-RUN dotnet restore "MainService/doantotnghiep.csproj"
+COPY ["MainService/DoAnTotNghiep.csproj", "MainService/"]
+RUN dotnet restore "MainService/DoAnTotNghiep.csproj"
 COPY . .
 WORKDIR "/src/MainService"
-RUN dotnet build "doantotnghiep.csproj" -c Release -o /app/build
+RUN dotnet build "DoAnTotNghiep.csproj" -c Release -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "doantotnghiep.csproj" -c Release -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "DoAnTotNghiep.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "doantotnghiep.dll"]
+ENTRYPOINT ["dotnet", "DoAnTotNghiep.dll"]
