update config kubenetes

--- a/DotNetBackEnd/AdminService/AdminService/appsettings.Production.json
+++ b/DotNetBackEnd/AdminService/AdminService/appsettings.Production.json
@@ -22,7 +22,7 @@
   "ConnectionStrings": {
     "DoAnTotNghiep": "Server=.;Database=db-main;User ID=sa;Password=vQt1hcssss;"
   },
-  "RabbitMQHost": "localhost",
+  "RabbitMQHost": "rabbitmq-clusterip-srv",
   "RabbitMQPort": "5672",
   "GrpcCategory": "https://localhost:5001",
   "AppConfigs": {
