--- a/DotNetBackEnd/MailService/MailService/appsettings.Production.json
+++ b/DotNetBackEnd/MailService/MailService/appsettings.Production.json
@@ -3,7 +3,7 @@
   "ConnectionStrings": {
     "ThucTapTotNghiep": "Server=localhost, 1433;Database=db-tttn;User ID=sa;Password=vQt1hcssss;"
   },
-  "RabbitMQHost": "localhost",
+  "RabbitMQHost": "rabbitmq-clusterip-srv",
   "RabbitMQPort": "5672",
   "GrpcCategory": "https://localhost:5001",
   "AppConfigs": {
