--- a/DotNetBackEnd/K8S/mssql.yaml
+++ b/DotNetBackEnd/K8S/mssql.yaml
@@ -28,6 +28,7 @@ spec:
                 name: mssql
                 key: SA_PASSWORD
           volumeMounts:
+          volumeMounts:
           - mountPath: /var/opt/mssql/data
             name: mssqldb
       volumes:
