--- a/DotNetBackEnd/MainService/MainService/appsettings.Development.json
+++ b/DotNetBackEnd/MainService/MainService/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "CategoryService": "https:localhost:41520/api/category/",
   "ConnectionStrings": {
-    "DoAnTotNghiep": "Server=localhost, 1433;Database=db-main;User ID=sa;Password=vQt1hcssss;"
+    "DoAnTotNghiep": "Server=localhost, 1433;Database=db-main;User ID=sa;Password=1234s#xzdasdas;"
   },
   "RabbitMQHost": "localhost",
   "RabbitMQPort": "5672",
