change config K8S (send mail successfully). jwt issue related to cookies

--- a/DotNetBackEnd/AdminService/AdminService/appsettings.Production.json
+++ b/DotNetBackEnd/AdminService/AdminService/appsettings.Production.json
@@ -20,7 +20,7 @@
 {
   "CategoryService": "https:localhost:41520/api/category/",
   "ConnectionStrings": {
-    "DoAnTotNghiep": "Server=.;Database=db-main;User ID=sa;Password=vQt1hcssss;"
+    "DoAnTotNghiep": "Server=mssql-clusterip-srv, 1433;Database=db-main;User ID=sa;Password=1234s#xzdasdas;"
   },
   "RabbitMQHost": "rabbitmq-clusterip-srv",
   "RabbitMQPort": "5672",
