--- a/DotNetBackEnd/AdminService/Dockerfile
+++ b/DotNetBackEnd/AdminService/Dockerfile
@@ -5,6 +5,8 @@ WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
+COPY AdminService/Resources/Images Resources/Images
+
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
 COPY ["AdminService/AdminService.csproj", "AdminService/"]
