--- a/DotNetBackEnd/K8S/ingress-srv.yaml
+++ b/DotNetBackEnd/K8S/ingress-srv.yaml
@@ -5,22 +5,23 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/use-regex: 'true'
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   rules:
     - host: acme.com
       http:
         paths:
-          - path: /api/main
-            pathType: Prefix
-            backend:
-              service:
-                name: mainservice-clusterip-srv
-                port:
-                  number: 80
-          - path: /api/c/admin
-            pathType: Prefix
+          - path: /admin(/|$)(.*)
+            pathType: ImplementationSpecific
             backend:
               service:
                 name: adminservice-clusterip-srv
                 port:
                   number: 80 
+          - path: /main(/|$)(.*)
+            pathType: ImplementationSpecific
+            backend:
+              service:
+                name: mainservice-clusterip-srv
+                port:
+                  number: 80
