--- a/DotNetBackEnd/MailService/Dockerfile
+++ b/DotNetBackEnd/MailService/Dockerfile
@@ -3,7 +3,10 @@
 FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
 EXPOSE 80
+EXPOSE 25
 EXPOSE 443
+
+COPY MailService/EmailTemplates EmailTemplates
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
