--- a/DotNetBackEnd/MainService/Dockerfile
+++ b/DotNetBackEnd/MainService/Dockerfile
@@ -5,6 +5,8 @@ WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
+COPY MainService/Resources/Images Resources/Images
+
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
 COPY ["MainService/doantotnghiep.csproj", "MainService/"]
