--- a/DotNetBackEnd/K8S/ingress-srv.yaml
+++ b/DotNetBackEnd/K8S/ingress-srv.yaml
@@ -6,6 +6,10 @@ metadata:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/use-regex: 'true'
     nginx.ingress.kubernetes.io/rewrite-target: /$2
+    kubernetes.io/ingress.allow-http: 'false'
+    nginx.ingress.kubernetes.io/secure-backends: 'true'
+    nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
+    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
 spec:
   rules:
     - host: acme.com
