--- a/DotNetBackEnd/MailService/MailService/appsettings.json
+++ b/DotNetBackEnd/MailService/MailService/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "AppConfigs": {
-    "Email": "voquangtuong336699@outlook.com.vn",
-    "Password": "mAtKhau77640119Azx#@21102023"
+    "Email": "voquangtuong185ptithcm@outlook.com",
+    "Password": "E31YE026997-RLCSEF650PY008334-0"
   }
 }
