--- a/AngularFrontEnd/package.json
+++ b/AngularFrontEnd/package.json
@@ -25,6 +25,7 @@
     "@popperjs/core": "^2.11.6",
     "@types/jwt-decode": "^3.1.0",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.4.1",
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
     "material-icons": "^1.13.1",
